drug tags added

--- a/Abott/rawHtml/e.html
+++ b/Abott/rawHtml/e.html
@@ -73,6 +73,7 @@ X
 Y
 Z
 E
+<drug>
 Ebasil
 Business: Abbott India Limited
 
@@ -85,7 +86,8 @@ STRENGTH: 10 mg, 20 mg
 BUSINESS AREAS: PHARMACEUTICALS,PHARMACEUTICALS ABBOTT INDIA LIMITED,ALLERGY,NEUROSCIENCE
 
 THERAPY AREAS: NEUROSCIENCE
-
+</drug>
+<drug>
 EBILITY
 MOLECULE: Diclofenac Potassium, Serratio Peptidase, Paracetamol
 
@@ -94,7 +96,8 @@ FORM: Tablet
 STRENGTH: Diclofenac Potassium 50mg + Serratio Peptidase 10mg + Paracetamol 325mg
 
 BUSINESS AREAS: PHARMACEUTICALS
-
+</drug>
+<drug>
 EBILITY
 MOLECULE: Diclofenac Potassium, Serratio Peptidase, Paracetamol
 
@@ -103,7 +106,8 @@ FORM: Tablet
 STRENGTH: Diclofenac Potassium 50mg + Serratio Peptidase 10mg + Paracetamol 500 mg
 
 BUSINESS AREAS: PHARMACEUTICALS
-
+</drug>
+<drug>
 Effimax-S
 Business: Abbott Truecare
 
@@ -116,7 +120,8 @@ STRENGTH: Ceftriazxone 250 mg + Sulbactum 125 mg; Ceftriazxone 1 g + Sulbactum 5
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: ANTI-INFECTIVES
-
+</drug>
+<drug>
 Eldicet
 Business: Abbott India Limited
 
@@ -129,7 +134,8 @@ STRENGTH: 50 mg
 BUSINESS AREAS: PHARMACEUTICALS,PHARMACEUTICALS ABBOTT INDIA LIMITED,GASTROENTEROLOGY,GASTRO
 
 THERAPY AREAS: GI & HEPATO,GASTRO
-
+</drug>
+<drug>
 Elect - ORS
 Business: Abbott Truecare
 
@@ -142,7 +148,8 @@ STRENGTH: Sodium Chloride 2.6 g + Potassium Chloride 1.5 g + Sodium Citrate 2.9 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 Elect - RTD Apple
 Business: Abbott Truecare
 
@@ -155,7 +162,8 @@ STRENGTH: Sodium Chloride 250 mg + Potassium Chloride 300 mg + Sodium Citrate 58
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 Elect - RTD Orange
 Business: Abbott Truecare
 
@@ -168,7 +176,8 @@ STRENGTH: Sodium Chloride 250 mg + Potassium Chloride 300 mg + Sodium Citrate 58
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 EN-ACE D 10 mg
 Business: Abbott Healthcare Solutions
 
@@ -181,7 +190,8 @@ STRENGTH: Enalpril Maleate 10 mg + Hydrochlorothiazide 25 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 EN-ACE D 2.5 mg
 Business: Abbott Healthcare Solutions
 
@@ -194,7 +204,8 @@ STRENGTH: Enalpril Maleate 2.5 mg + Hydrochlorothiazide 12.5 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 EN-ACE D 5 mg
 Business: Abbott Healthcare Solutions
 
@@ -207,7 +218,8 @@ STRENGTH: Enalpril Maleate 5 mg + Hydrochlorothiazide 12.5 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 EN-ACE
 Business: Abbott Healthcare Solutions
 
@@ -220,7 +232,8 @@ STRENGTH: 2.5 mg, 5 mg, 10 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 Enliva
 Business: Abbott India Limited
 
@@ -233,7 +246,8 @@ STRENGTH: Rabeprazole Sodium IP 20 mg (As enteric coated pellets) Levosulpiride 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 Ensure (Healthcare Professionals)
 BUSINESS AREAS: NUTRITION,THERAPEUTIC NUTRITION,ADULT
 
@@ -249,7 +263,8 @@ STRENGTH: 200 MG, 500 MG
 BUSINESS AREAS: PHARMACEUTICALS ABBOTT INDIA LIMITED,GASTRO
 
 THERAPY AREAS: GASTRO
-
+</drug>
+<drug>
 Enteroshield
 Business: Abbott India Limited
 
@@ -262,7 +277,8 @@ STRENGTH: Each 0.5 mL prefilled syringe contains purified Vi-Capsular Polysaccha
 BUSINESS AREAS: PHARMACEUTICALS ABBOTT INDIA LIMITED,VACCINE
 
 THERAPY AREAS: RESPIRATORY,VACCINE
-
+</drug>
+<drug>
 Epilex Chrono 200
 Business: Abbott India Limited
 
@@ -275,7 +291,8 @@ STRENGTH: Each film coated controlled release tablet contains: Sodium Valproate 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Epilex Chrono 300
 MOLECULE: Sodium Valproate and Valproic Acid Controlled Release Tablet
 
@@ -286,7 +303,8 @@ STRENGTH: Each film coated controlled release tablet contains: Sodium Valproate 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Epilex Chrono 500
 Business: Abbott India Limited
 
@@ -299,7 +317,8 @@ STRENGTH: Each film coated controlled release tablet contains: Sodium Valproate 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Epilex
 Business: Abbott India Limited
 
@@ -312,7 +331,8 @@ STRENGTH: 200 ml ( 200mg/5ml)
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Epilex
 Business: Abbott India Limited
 
@@ -325,7 +345,8 @@ STRENGTH: 100 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Eptifab 20 mg
 Business: Abbott Healthcare Solutions
 
@@ -338,7 +359,8 @@ STRENGTH: Each Eptifab 10 ml vial contains Eptifibatide 20 mg/10 ml
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 Eptifab 75 mg
 Business: Abbott Healthcare Solutions
 
@@ -351,7 +373,8 @@ STRENGTH: Each Eptifab 10 ml vial contains Eptifibatide 75 mg/100 ml
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 Eptoin
 Business: Abbott India Limited
 
@@ -364,7 +387,8 @@ STRENGTH: 50 MG 10 ML ,50 MG 2 ML
 BUSINESS AREAS: PHARMACEUTICALS,PHARMACEUTICALS ABBOTT INDIA LIMITED,NEUROSCIENCE
 
 THERAPY AREAS: NEURO-PSYCHIAT,NEUROSCIENCE
-
+</drug>
+<drug>
 Eptoin
 Business: Abbott India Limited
 
@@ -377,7 +401,8 @@ STRENGTH: 30 MG 200 ML
 BUSINESS AREAS: PHARMACEUTICALS,PHARMACEUTICALS ABBOTT INDIA LIMITED,NEUROSCIENCE
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Eptoin
 Business: Abbott India Limited
 
@@ -390,7 +415,8 @@ STRENGTH: 300 MG (ER) ,100 MG,50 MG
 BUSINESS AREAS: PHARMACEUTICALS,PHARMACEUTICALS ABBOTT INDIA LIMITED,NEUROSCIENCE
 
 THERAPY AREAS: NEURO-PSYCHIAT
-
+</drug>
+<drug>
 Ertycin - L
 Business: Abbott Truecare
 
@@ -403,7 +429,8 @@ STRENGTH: Azithromycin 250 mg + Levofloxacin 250 mg; Azithromycin 500 mg + Levof
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: ANTI-INFECTIVES
-
+</drug>
+<drug>
 ESGIPYRIN DS INJECTION (TP)
 Business: Abbott Healthcare Solutions
 
@@ -416,7 +443,8 @@ STRENGTH: Diclofenac Sodium (B.P.) 25mg + Benzyl Alcohol (I.P.) 40mg, water for 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 Esgipyrin Instagel
 Business: Abbott Healthcare Solutions
 
@@ -429,7 +457,8 @@ STRENGTH: Diclofenac 1% w/w + linoleic acid 3% w/w + capsaicin usp 0.025% w/w + 
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 Esgipyrin SP
 Business: Abbott Healthcare Solutions
 
@@ -442,7 +471,8 @@ STRENGTH: Diclofenac 50 mg + Paracetamol 325 mg + Serratiopeptidase 10 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 Esgipyrin-AQ Injection 1ml
 Business: Abbott Healthcare Solutions
 
@@ -455,7 +485,8 @@ STRENGTH: Diaclofenac Sodium IP 75mg + Benzyl Alchol IP 4% v/v (as preservatives
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 ESGIPYRIN
 Business: Abbott Healthcare Solutions
 
@@ -468,7 +499,8 @@ STRENGTH: Paracetamol IP 500 mg + Diclofenac Sodium IP 50mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 Esoga-rd
 Business: Abbott Healthcare Solutions
 
@@ -481,7 +513,8 @@ STRENGTH: Rabeprazole sodium 20mg + Domperidone SR B.P. 30mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 Essentiale L
 Business: Abbott Healthcare Solutions
 
@@ -494,7 +527,8 @@ STRENGTH: Lecithin IP 350 mg equivalent to 175mg of essential phospholipids (EPL
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: GI & HEPATO
-
+</drug>
+<drug>
 Estrabet
 Business: Abbott India Limited
 
@@ -507,7 +541,8 @@ STRENGTH: 1mg, 2mg
 BUSINESS AREAS: PHARMACEUTICALS ABBOTT INDIA LIMITED,WOMEN'S HEALTH
 
 THERAPY AREAS: WOMEN'S HEALTH
-
+</drug>
+<drug>
 ETODY
 Business: Abbott Healthcare Solutions
 
@@ -520,7 +555,8 @@ STRENGTH: 60 mg, 90 mg, 120 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 EUGLUCON
 Business: Abbott Healthcare Solutions
 
@@ -533,7 +569,8 @@ STRENGTH: 5 mg
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: CARDIO-DIABETO
-
+</drug>
+<drug>
 EXERGE HC
 Business: Abbott Healthcare Solutions
 
@@ -544,7 +581,8 @@ FORM: Capsule
 STRENGTH: Each capsule contains Beta caroteen 30 mg (as oily dispersion) + Vitamin C IP 150 mg + Vitamin E acetete IP 25 mg + Zinc (as zinc oxide IP) 40 mg + Selenium (as sodium selenate ) 200 mcg + Copper (as cupric oxide) 2 mg + Manganese 5 mg
 
 BUSINESS AREAS: PHARMACEUTICALS
-
+</drug>
+<drug>
 EXERGE HC
 Business: Abbott Healthcare Solutions
 
@@ -557,14 +595,15 @@ STRENGTH: Triamcinolone Acetonide I.P. 10 mg + Benzyl Alcohol I.P. 0.9%
 BUSINESS AREAS: PHARMACEUTICALS
 
 THERAPY AREAS: PAIN MGMT
-
+</drug>
+<drug>
 Extremely gentle cleanser lotion
 MOLECULE: Avene Thermal Spring water (Avene Aqua), Cetearly Alcohol, O-Phenylphenol, Cetrimonium Bromide, Decyl glucoside, Disodium EDTA, Sodium Cetearyl sulfate and Sodium Lauryl sulfate water(Aqua)
 
 FORM: Lotion
 
 BUSINESS AREAS: PHARMACEUTICALS
-
+</drug>
 "e"
 #
 A
